--- a/default.yml
+++ b/default.yml
@@ -147,6 +147,12 @@ commands:
       punish-name: "remover o silenciamento"
       sucessfully-unmuted: "O usuário aprendeu a falar novamente, espero que dessa vez ele fale coisas interessantes e legais para que não seja silenciado de novo!"
       automatically-expired: "Após muito tempo silenciado... o usuário finalmente aprendeu a falar novamente! Espero que dessa vez ele fale coisas interessantes e legais para que não seja silenciado de novo!"
+    lock:
+      description: "Bloquear os usuários de falarem no canal de texto onde o comando foi executado"
+      denied: "Agora nenhum usuário pode falar aqui!"
+      allowed: "Agora os usuários podem falar!"
+    unlock:
+      description: "Desbloqueia usuários de falarem no canal de texto onde o comando foi executado"
   # SOCIAL
   social:
     reputation:
