--- a/default.yml
+++ b/default.yml
@@ -144,6 +144,8 @@ commands:
       response: "**{0} dançou com {1}!**"
   # MODERAÇÃO
   moderation:
+    dashboard:
+      description: "Manda o link do Dashboard para adicionar/configurar a Loritta"
     unmute:
       punish-action: "Retirado o Silenciamento"
       punish-name: "remover o silenciamento"
