troca de administration para moderation
pq eu coloquei no code de moderation e na locale esta administation HAHAHAHAHAHA

--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -1,4 +1,4 @@
 commands:
-  administration:
+  moderation:
     dashboard:
       description: "Envia o link do Dashboard para adicionar/configurar a Loritta"
