--- a/default/commands-fun.yml
+++ b/default/commands-fun.yml
@@ -7,3 +7,23 @@ commands:
       - "babyshark hit or miss I guess they never miss huh"
       - "lista"
       music: "música"
+    gabriela:
+      hasBadWord: "Que feio, para que perguntar essas coisas para ela?"
+    giveaway:
+      description: "Todos amam sorteios! Faça sorteios em seu servidor para os membros do seu servidor para eles se divertirem tentando ganhar. (Observação: Não me responsabilizo se reclamarem que é \"roubado\")"
+      giveawayValidCustomMessage: "Você colocou uma mensagem personalizada para o sorteio!"
+      giveawaySetupCancelled: "A configuração do sorteio foi cancelada..."
+      giveawayName: "Qual será o nome do sorteio? (Algo como... `felicidade eterna`, por exemplo)"
+      giveawayDescription: "Qual será a descrição do sorteio? (Coloque informações sobre o sorteio! Tipo... `uma pessoa sortuda irá ganhar felicidade eterna! ...e muitas novinhos(as) como presente`)"
+      giveawayDuration: "Por quanto tempo irá durar o sorteio? (`5 minutos`, `1 hora 30 minutos`, `7 dias`, etc)"
+      giveawayReaction: "Qual emoji deverá ser usado nas reações do sorteio?"
+      giveawayChannel: "Em qual canal será realizado o sorteio?"
+      giveawayWinnerCount: "Quantas pessoas vão poder ganhar o sorteio? (Você pode colocar no mínimo 1 pessoa e no máximo 20 pessoas!)"
+      giveawayDoYouWantAutomaticRole: "Você deseja que o vencedor ganhe cargos automaticamente? (Imagine... você poderia dar um cargo de `subornou para ganhar o sorteio` automaticamente para ele!)"
+      giveawayMentionRoles: "Quais cargos serão dados para quem ganhar o sorteio?"
+      giveawayNoValidRoles: "Nenhum cargo válido foi encontrado! Você tem certeza que você escreveu corretamente?"
+      giveawayCantInteractWithRole: "Eu não consigo dar o cargo {0}!"
+      noWinner: "Ninguém participou do sorteio... já que ninguém participou, será que eu posso ficar com o prêmio do sorteio?"
+      oneWinner: "Parabéns {0} por ganhar o sorteio {1}!"
+      multipleWinners: "Parabéns aos ganhadores do sorteio {0}!"
+      giveawayEnded: "Sorteio encerrado! Obrigada a todos que participaram do sorteio!"
