Adicionar locales do +roleinfo
uau

--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -8,3 +8,15 @@ commands:
     channelTopic: "Tópico do canal"
     undefined: "Não definido"
     notFound: "Canal não encontrado!"
+  roleinfo:
+    description: "Mostra informações de um cargo"
+    roleNotFound: "Tentei procurar por cargos mencionados, IDs, e nomes de cargos e não encontrei nenhum cargo!"
+    booleanTrue: "Sim"
+    booleanFalse: "Não"
+    roleMention: "Menção"
+    roleCreated: "Data de criação"
+    roleID: "ID do Cargo"
+    roleHoisted: "Exibe seperadamente na lista de membros"
+    roleIntegration: "Integração"
+    roleMentionable: "Mencionável"
+    rolePermissions: "Permissões"
