Adicionar uma string owo

--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -17,6 +17,7 @@ commands:
     roleHoisted: "Exibe seperadamente na lista de membros"
     roleIntegration: "Integração"
     roleMentionable: "Mencionável"
+    roleMembers: "Membros"
     roleColor : "Cor do cargo"
     rolePermissions: "Permissões"
   renameemoji:
