--- a/default/commands.yml
+++ b/default/commands.yml
@@ -1,3 +1,5 @@
+commands:
+  didYouMeanCommand: "Mas eu acho que você queria escrever `{0}`"
 please-wait-cooldown: "Calma aí! Você precisa esperar **{0}** antes de poder executar outro comando! {1}"
 error-while-executing-command: "Alguma coisa deu extremamente errada ao executar este comando... 😭 Desculpe pela inconveniência. 😢"
 cant-use-in-private: "Você não pode usar este comando em mensagens privadas!"
