--- a/default/modules-counter.yml
+++ b/default/modules-counter.yml
@@ -8,4 +8,6 @@ loritta:
         blurple: "Blurple"
         black: "Preto"
         deluxe: "Deluxe"
+        loritta: "Loritta"
+        loritta-kawaii: "Loritta Kawaii"
         custom: "Customizado"
