--- a/default/loritta.yml
+++ b/default/loritta.yml
@@ -2,6 +2,9 @@ loritta:
   translationAuthors:
   - "123170274651668480"
   saving: "Salvando"
+  fancyBoolean:
+    'true': "Sim"
+    'false': "Não"
   pronoun:
     his: "dele"
     her: "dela"
