--- a/default/website-donate.yml
+++ b/default/website-donate.yml
@@ -9,6 +9,7 @@ website:
     - "Se você quer que eu continue online, então por favor, do fundo do meu coração... <b>doe</b>, não importa se você irá doar apenas R$1, toda doação é bem-vinda e, é claro, você será uma pessoa maravilhosa (com muita fama e glória!)."
     donateNow: "Doar Agora!"
     donationBenefits: "Benefícios ao Doar"
+    benefitsExplain: "Para agradecer a sua doação, nós temos algumas vantagens para você! Cada benefício dura por um mês após a sua doação."
     activeDonators: "Pagadores de Aluguel"
     inactiveDonators: "Doadores Inativos"
     thanksToEveryone: "Obrigada a todos que me ajudaram!"
