--- a/default/commands-images.yml
+++ b/default/commands-images.yml
@@ -1,5 +1,9 @@
 commands:
   images:
+    drawnword:
+      description: "eU sO crianSA i escRevO coIsas ToSCas"
+      examples:
+      - "eU ODEIu PUDIN MAS TODu MUNDO GOSTa Naum SEI PURKÊ"
     atendente:
       description: "O número de pessoas que sacam as referências dos meus comandos, por mais que sejam incrivelmente óbvias e gritantes... é minúsculo. Você sabe quem é, se não sabe, não consegue pegar referências! Escreva algo na bandana da Atendente que sempre aparece nos vídeos do Drawn Mask!"
       examples:
